# astrofiler-gui

./: .gitattributes  .gitignore  BUILD_INFO.txt  CHANGELOG.md  CHANGE_LOG.md  CLOUD_SYNC_CONFIG.md  Cloud Services.md  DWARF File Handling.md  Documentation_Update_Checklist.md  GCS_SETUP_GUIDE.md  LICENSE  LIGHT_CALIBRATION_CHECKLIST.md  MAPPING_IMPLEMENTATION.md  MASTER_CREATION.md  MIGRATIONS.md  Makefile  README.md  RELEASE.v.1.2.0.md  REORGANIZATION_SUMMARY.md  Roadmap.md  SMART_TELESCOPE_GUIDE.md  TESTING.md  TESTING_MIGRATION.md  TEST_README.md  TEST_SUMMARY.md  astrofiler-gui-V1.1.0.code-workspace  astrofiler-gui.old.py  astrofiler.db-shm  astrofiler.ini  astrofiler.py  astrofiler_cloud.py  astrofiler_db.py  astrofiler_file.py  astrofiler_gui.py  astrofiler_launcher.bat  astrofiler_smart.py  build_packages.py  calibration_workshop_ABAur.ipynb  calibration_workshop_general.ipynb  check_masters.py  (+47 more)
.github/: copilot-instructions.md
archive/: astrofiler.py  config.py
backups/: BACKUP_SUMMARY.md  astrofiler_cloud_backup.py  astrofiler_db_original.py  astrofiler_file.py.backup  astrofiler_gui_backup.py  astrofiler_masters_backup.py  astrofiler_smart_backup.py  test_master_integration_before_cleanup.py  test_refactored_modules_before_cleanup.py
commands/: AutoCalibration.py  CloudSync.py  CreateSessions.py  Download.py  DownloadImages.py  LinkSessions.py  LoadRepo.py  Photometry.py  README.md  RegisterExisting.py  ResetCalibrationTestState.py  Stack.py  SyncRepo.py  VariableStarPhotometry.py  astrofiler_workflow.bat  astrofiler_workflow.sh  basic_crontab.txt  calibrateLights.py  cron_autocalibration.bat  cron_autocalibration.sh  cron_calibrate_lights.bat  cron_calibrate_lights.sh  cron_cloudsync.bat  cron_cloudsync.sh  cron_createsessions.bat  cron_createsessions.sh  cron_linksessions.bat  cron_linksessions.sh  cron_loadrepo.bat  cron_loadrepo.sh  cron_regeneratesessions.bat  cron_regeneratesessions.sh  cron_registerexisting.bat  cron_registerexisting.sh  sample_crontab.txt
css/: dark.css  light.css
denoise/: denoise.md  denoise_fits_image.py
docs/: CHANGE_LOG.md  CLOUD_SYNC_COMPLETE.md  COMPATIBILITY_LAYER_REMOVAL_SUMMARY.md  COMPRESSION_STRATEGY.md  Cloud Services.md  DATABASE_INTEGRATION_SUMMARY.md  Database-Schema.md  ERROR_HANDLING_MODERNIZATION_SUMMARY.md  MODELS_INTEGRATION_SUMMARY.md  PROJECT_ORGANIZATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SERVICES_MIGRATION_SUMMARY.md  TYPE_HINTS_IMPLEMENTATION_SUMMARY.md
install/: PyWinInstall.Special.bat  README.md  astrofiler.desktop  convert_icon.py  install.bat  install.ps1  install.sh  install_macos.sh  launch_astrofiler.bat  launch_astrofiler.ps1  launch_astrofiler.sh  launch_astrofiler_macos.sh  schedule_tasks.ps1  upgrade.ps1  upgrade.sh  upgrade_macos.sh
migrations/: 001_initial_schema.py  002_add_master_calibration_fields.py  003_add_mapping_table.py  004_remove_is_default_from_mapping.py  005_recreate_mapping_table_without_is_default.py  006_add_cloud_url_field.py  007_add_calibration_fields.py  007_create_masters_table.py  008_add_session_autocal_fields.py  008_remove_master_fields.py  009_add_observer_notes_fields.py  009_add_quality_metrics_fields.py  010_add_masters_table.py  010_add_session_quality_fields.py  011_add_performance_indexes.py  012_add_masters_table.py  012_add_variable_stars_table.py
mosaic/: Mosaic.md
notebooks/: RWAUR.ipynb  calibration.ipynb  calibration_workshop_general.ipynb  photometry_workshop_variable.ipynb
test/: README.md  TESTING.md  TEST_SUMMARY.md  __init__.py  run_tests.py  test_astrofiler.py  test_basic.py  test_file_processing.py  test_gui.py  test_mapping.py  test_simple.py  validate_astrofiler.py
tests/: README.md  __init__.py  conftest.py  test_database.py  test_database_integration.py  test_error_handling.py  test_fits_processing.py  test_gui_fixed.py  test_integration.py  test_main.py  test_master_integration.py  test_models_integration.py  test_refactored_modules.py  test_solid_principles.py  test_type_hints.py  test_ui_integration.py
tools/: smoke_test_tile_compression.py
ui/: __init__.py  cloud_sync_dialog.py  config_widget.py  download_dialog.py  duplicates_widget.py  images_widget.py  log_widget.py  main_window.py  mappings_dialog.py  merge_widget.py  (+2 more)
(+99 files in other folders)
